--- a/product.html
+++ b/product.html
@@ -175,7 +175,7 @@
 
   <script>
     const products = [
-      // Tobacco
+ <!-- Tobacco Section -->     
       { img: "seven stars cig.JPG", name: "SEVEN STARS CIGARETTES" },
       { img: "red apple cig.JPG", name: "RED APPLE CIGARETTES" },
       { img: "nike cig.jpeg", name: "CUSTOM NIKE CIGARETTES" },
@@ -186,12 +186,12 @@
       { img: "brown bear herbs.jpg", name: "BROWN BEAR CIGARETTES" },
       { img: "newport mentol.jpeg", name: "NEWPORT CIGARETTES" },
 
-      // Nicotine Pouches
+      <!--nicotine pouches-->
       { img: "zyn chill.WEBP", name: "ZYN CHILLS" },
       { img: "zyn citrus.WEBP", name: "ZYN CITRUS" },
       { img: "zyn wintergreen.WEBP", name: "ZYN WINTERGREEN" },
 
-      // Lighters
+     <!--lighters-->
       { img: "taylor swift lighter.JPG", name: "TAYLOR SWIFT CUSTOM LIGHTER" },
       { img: "the shining lighter.JPG", name: "THE SHINING LIGHTER" },
       { img: "rip bt lighter.JPG", name: "RIP BETTER DAYS LIGHTER" },
@@ -202,7 +202,7 @@
       { img: "edward lighter.JPG", name: "EDWARD SCISSOR HANDS LIGHTER" },
       { img: "80s lighter.JPG", name: "CUSTOM 80S LIGHTER" },
 
-      // Vapes
+      <!--vapes-->
       { img: "vozol CB juice.JPG", name: "VOZOL CARIBBEAN JUICE 20K" },
       { img: "vozol bluecherry.WEBP", name: "VOZOL BLUECHERRY 20K" },
       { img: "vozol strawberry.WEBP", name: "VOZOL STRAWBERRY 20K" },
@@ -213,7 +213,7 @@
       { img: "ivg 2400 strawberry.JPG", name: "IVG 2400 STRAWBERRY" },
       { img: "ivg 2400 tropical.JPG", name: "IVG 2400 TROPICAL" },
 
-      // Other
+   <!--our other items-->
       { img: "burn baby burn ash tray.JPG", name: "BBB ASH TRAY" },
       { img: "marlboro ash tray.jpeg", name: "CUSTOM MARLBORO ASH TRAY" },
       { img: "marlboro drawer.jpeg", name: "CUSTOM MARLBORO DRAWER" },
