--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>About Us | GrimmDraw</title>
 
   <style>
-<link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
     * {
       margin: 0;
       padding: 0;
@@ -105,6 +105,14 @@
       border-radius: 10px;
       box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
       z-index: 1;
+      opacity: 0; /* Hide initially */
+      transform: translateY(50px); /* Initial position off-screen */
+      transition: opacity 1s ease-out, transform 1s ease-out;
+    }
+
+    .scroll-section.visible {
+      opacity: 1;
+      transform: translateY(0); /* Move to normal position */
     }
 
     .scroll-section h2 {
@@ -137,9 +145,8 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="feedback.html">Feedback</a>
-<a href="cart.html">cart</a>  
-
-</nav>
+    <a href="cart.html">Cart</a>  
+  </nav>
 
   <div class="spacer"></div>
 
@@ -160,7 +167,8 @@
 
   <div class="spacer" style="height: 80px;"></div>
 
-  <section class="scroll-section">
+  <!-- Initially hidden section -->
+  <section class="scroll-section" id="our-story">
     <h2>Our Story</h2>
     <p>
       GrimmDraw was born out of a desire to challenge the norms of traditional smoking culture. What began as a niche
@@ -187,12 +195,21 @@
 
   <script>
     const fadeBg = document.getElementById("fadeBg");
+    const ourStorySection = document.getElementById("our-story");
 
     window.addEventListener("scroll", () => {
       const scrollY = window.scrollY;
-      const triggerPoint = window.innerHeight * 0.7;
+      const triggerPoint = ourStorySection.offsetTop - window.innerHeight + 100; // When you scroll 100px before the section
 
       if (scrollY > triggerPoint) {
+        ourStorySection.classList.add("visible");
+      } else {
+        ourStorySection.classList.remove("visible");
+      }
+
+      // Background fade effect
+      const scrollTrigger = window.innerHeight * 0.7;
+      if (scrollY > scrollTrigger) {
         fadeBg.classList.add("active");
       } else {
         fadeBg.classList.remove("active");
