--- a/contact.html
+++ b/contact.html
@@ -1,146 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | GrimmDraw</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact Us | GrimmDraw</title>
 
-    <style>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-<link rel="stylesheet" href="style.css" />      
-        
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background: url('smoke face.jpg') no-repeat center center fixed;
-            background-size: cover;
-            color: white;
-        }
+    html, body {
+      height: 100%;
+      font-family: Arial, sans-serif;
+      color: white;
+      background: url('smoke face.jpg') no-repeat center center fixed;
+      background-size: cover;
+      scroll-behavior: smooth;
+      overflow-x: hidden;
+    }
 
-        header {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            font-size: 24px;
-            font-weight: bold;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    header {
+      background: rgba(0, 0, 0, 0.7);
+      padding: 20px;
+      font-size: 24px;
+      font-weight: bold;
+      text-align: center;
+    }
 
-        nav {
-            background: black;
-            padding: 15px;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
+    nav {
+      background: black;
+      padding: 15px;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
 
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 20px;
-            font-size: 18px;
-            font-weight: bold;
-            transition: 0.3s;
-        }
+    .nav-links {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
 
-        nav a:hover {
-            text-decoration: underline;
-            color: #f8c471;
-        }
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+    }
 
-        .contact-container {
-            max-width: 600px;
-            margin: 50px auto;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
-        }
+    .nav-links a:hover {
+      text-decoration: underline;
+      color: #f8c471;
+    }
 
-        .contact-container a {
-            color: #f8c471;
-            text-decoration: none;
-            font-weight: bold;
-        }
+    .nav-right {
+      color: white;
+      font-weight: bold;
+      margin-left: auto;
+      padding-right: 20px;
+    }
 
-        .contact-container a:hover {
-            text-decoration: underline;
-        }
+    main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 40px 20px;
+    }
 
-        .contact-form input,
-        .contact-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-        }
+    .contact-container {
+      max-width: 600px;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+      text-align: center;
+    }
 
-        .contact-form button {
-            background: #f8c471;
-            color: black;
-            border: none;
-            padding: 10px 15px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
+    .contact-container h2 {
+      margin-bottom: 15px;
+      font-size: 28px;
+    }
 
-        .contact-form button:hover {
-            background: white;
-            color: black;
-        }
+    .contact-container p {
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
 
-        footer {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            font-size: 14px;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    .contact-container a {
+      color: #f8c471;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .contact-container a:hover {
+      text-decoration: underline;
+    }
+
+    .contact-form {
+      margin-top: 20px;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    .contact-form button {
+      background: #f8c471;
+      color: black;
+      border: none;
+      padding: 10px 15px;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .contact-form button:hover {
+      background: white;
+      color: black;
+    }
+
+    footer {
+      background: rgba(0, 0, 0, 0.8);
+      padding: 10px;
+      font-size: 14px;
+      text-align: center;
+      position: relative;
+      width: 100%;
+    }
+  </style>
 </head>
 
 <body>
 
-    <header>
-        <h1>GrimmDraw</h1>
-    </header>
+  <header>
+    <h1>Contact GrimmDraw</h1>
+  </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="product.html">Product</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="feedback.html">Feedback</a>
-        <a href="cart.html">Cart</a>
-    </nav>
+  <nav>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="product.html">Product</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+      <a href="feedback.html">Feedback</a>
+      <a href="cart.html">Cart</a>
+    </div>
+    <div class="nav-right">
+      🛒 Cart: <span id="cart-count">0</span>
+    </div>
+  </nav>
 
-    <main>
-        <div class="contact-container">
-            <h2>Get in Touch</h2>
-            <p>We’d love to hear from you! Feel free to reach out to us via email.</p>
-            <p>Email: <a href="mailto:jabucigs@gmail.com">GrimmDraw@gmail.com</a></p>
+  <main>
+    <div class="contact-container">
+      <h2>Get in Touch</h2>
+      <p>We’d love to hear from you! Feel free to reach out to us via email.</p>
+      <p>Email: <a href="mailto:GrimmDraw@gmail.com">GrimmDraw@gmail.com</a></p>
 
-            <h3>Send us a message</h3>
-            <form class="contact-form">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea rows="4" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </main>
+      <h3>Send us a message</h3>
+      <form class="contact-form">
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea rows="4" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
+  </footer>
 
 </body>
 </html>
