--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,10 @@
       padding-right: 20px;
     }
 
+    .spacer {
+      height: 40px;
+    }
+
     main {
       display: flex;
       justify-content: center;
@@ -161,6 +165,8 @@
       🛒 Cart: <span id="cart-count">0</span>
     </div>
   </nav>
+
+  <div class="spacer"></div>
 
   <main>
     <div class="contact-container">
