--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us | GrimmDraw</title>
-
   <style>
     * {
       margin: 0;
@@ -20,6 +19,8 @@
       background-size: cover;
       scroll-behavior: smooth;
       overflow-x: hidden;
+      display: flex;
+      flex-direction: column;
     }
 
     header {
@@ -66,11 +67,8 @@
       padding-right: 20px;
     }
 
-    .spacer {
-      height: 40px;
-    }
-
     main {
+      flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -79,6 +77,7 @@
 
     .contact-container {
       max-width: 600px;
+      width: 100%;
       background: rgba(0, 0, 0, 0.7);
       padding: 30px;
       border-radius: 10px;
@@ -135,19 +134,23 @@
       color: black;
     }
 
+    .confirmation-message {
+      margin-top: 15px;
+      color: #f8c471;
+      font-weight: bold;
+      display: none;
+    }
+
     footer {
       background: rgba(0, 0, 0, 0.8);
       padding: 10px;
       font-size: 14px;
       text-align: center;
-      position: relative;
-      width: 100%;
     }
   </style>
 </head>
 
 <body>
-
   <header>
     <h1>Contact GrimmDraw</h1>
   </header>
@@ -166,8 +169,6 @@
     </div>
   </nav>
 
-  <div class="spacer"></div>
-
   <main>
     <div class="contact-container">
       <h2>Get in Touch</h2>
@@ -175,12 +176,15 @@
       <p>Email: <a href="mailto:GrimmDraw@gmail.com">GrimmDraw@gmail.com</a></p>
 
       <h3>Send us a message</h3>
-      <form class="contact-form">
+      <form class="contact-form" id="contactForm">
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <textarea rows="4" placeholder="Your Message" required></textarea>
         <button type="submit">Send Message</button>
       </form>
+      <div class="confirmation-message" id="confirmationMessage">
+        ✅ Thank you! Your message has been sent.
+      </div>
     </div>
   </main>
 
@@ -188,5 +192,15 @@
     <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
   </footer>
 
+  <script>
+    const form = document.getElementById('contactForm');
+    const confirmation = document.getElementById('confirmationMessage');
+
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
+      confirmation.style.display = 'block';
+      form.reset();
+    });
+  </script>
 </body>
 </html>
